Working on IE support... and some layout issues

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -24,7 +24,7 @@ body
 #wrapper 
 {
     background-color:#FFFFFF;
-    width: 90%;
+    width: 1100px;
     margin: 0 auto;
     margin-top: 50px; 
     padding:0px 0px 20px 0px;
@@ -33,7 +33,14 @@ body
     min-height:250px;
     
 }
-
+.login{
+    padding: 5px 10px 10px 10px;
+    border:#FFFFFF;
+    border:solid;
+    border-width: 2px;
+    text-align:center;
+    width:400px;
+}
 .ie #wrapper{
     width:expression(document.body.clientWidth < 1000? "1000px": "90%" );
 }
@@ -217,7 +224,7 @@ hr.Title{
         text-align: left;
         height: 90%;
         min-width:1000px;
-	width:90%;
+	width:1100px;
 	height:150px;
 	background: #363636; /* Old browsers */
 	background: -moz-linear-gradient(top,  #363636 0%, #3f3f3f 12%, #484848 25%, #323232 39%, #1f1f1f 50%, #000000 51%, #0c0c0c 60%, #1f1f1f 76%, #141414 91%, #0d0d0d 100%); /* FF3.6+ */
@@ -258,10 +265,11 @@ hr.Title{
 */
 .formStyle {
     
-    padding: 5px 20px 20px 20px;
+    padding: 5px 10px 10px 10px;
     border:#FFFFFF;
     border:solid;
     border-width: 2px;
+    text-align:center;
     
     
 }
